Closed Bug 762079 Opened 14 years ago Closed 14 years ago

crash in nsFileStreamBase::MaybeOpen , Startup crash with WebMail Notifier

Categories

(Core :: XPCOM, defect)

16 Branch
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla16

People

(Reporter: alice0775, Assigned: darktrojan)

References

Details

(Keywords: crash, regression, topcrash)

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is report bp-6f65bec3-398a-49c9-8966-b98182120606 . ============================================================= Build Identifier: http://hg.mozilla.org/mozilla-central/rev/6338a8988917 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:16.0) Gecko/16.0 Firefox/16.0a1 ID:20120606030528 Startup crash with WebMail Notifier https://addons.mozilla.org/ja/firefox/addon/webmail-notifier/ Steps to Reproduce: 1. Start Browser with new profile 2. Install WebMail Notifier https://addons.mozilla.org/ja/firefox/addon/webmail-notifier/ 3. Restart Actual Results: Crashes Regression window Good: http://hg.mozilla.org/mozilla-central/rev/a567f52fa0d8 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:16.0) Gecko/16.0 Firefox/16.0a1 ID:20120605163217 Crashes: http://hg.mozilla.org/mozilla-central/rev/a15d75939cd5 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:16.0) Gecko/16.0 Firefox/16.0a1 ID:20120605191018 Pushlog: http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=a567f52fa0d8&tochange=a15d75939cd5 Triggered by: a15d75939cd5 Geoff Lankow — Bug 749930 - Replace uses of nsILocalFile with nsIFile (compiled code only); r=bsmedberg
OS: Windows 7 → All
This used to use do_QueryInterface to make it null safe. Now that has been removed.
Crash Signature: [@ nsFileStreamBase::MaybeOpen(nsIFile*, int, int, bool)] → [@ nsFileStreamBase::MaybeOpen(nsIFile*, int, int, bool)] [@ nsFileStreamBase::MaybeOpen]
Crash Signature: [@ nsFileStreamBase::MaybeOpen(nsIFile*, int, int, bool)] [@ nsFileStreamBase::MaybeOpen] → [@ nsFileStreamBase::MaybeOpen(nsIFile*, int, int, bool)] [@ nsFileStreamBase::MaybeOpen] [@ nsFileStreamBase::DoOpen ]
There are about 150 crashes an hour.
Keywords: topcrash
Crash Signature: [@ nsFileStreamBase::MaybeOpen(nsIFile*, int, int, bool)] [@ nsFileStreamBase::MaybeOpen] [@ nsFileStreamBase::DoOpen ] → [@ nsFileStreamBase::MaybeOpen(nsIFile*, int, int, bool)] [@ nsFileStreamBase::MaybeOpen] [@ nsFileStreamBase::DoOpen()] [@ nsFileStreamBase::DoOpen]
Hardware: x86 → All
Attached patch fix — — Splinter Review
Also cleans up a stray nsresult.
Attachment #630754 - Flags: review?(bent.mozilla)
Comment on attachment 630754 [details] [diff] [review] fix The old code returned NS_ERROR_UNEXPECTED if the QI failed. Who knows if anyone depends on it, but please leave it that way. r=me with that change.
Attachment #630754 - Flags: review?(bent.mozilla) → review+
Assignee: nobody → geoff
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla16
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: