Bug 762079 - crash in nsFileStreamBase::MaybeOpen; r=bent